src/objects/Account_Org_Relationship__c.object
<CustomObject>
    <description>This object is to relate different accounts in the org irrespective of Dealer or Grower</description>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archive_Ind__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Archive Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Account_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Org Relationships (Child Party)</relationshipLabel>
        <relationshipName>Account_Org_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Child_Acct_Bus_Role_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Party Relationship</label>
        <referenceTo>Account_Business_Role__c</referenceTo>
        <relationshipLabel>Account Org Relationships (Child Party Relationship)</relationshipLabel>
        <relationshipName>Account_Org_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HC_Integration_Key__c</fullName>
        <description>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is for the temporary storage of an external id for the Heroku Connect Integration. It will be used as necessary for parent-child relationships. Further integrations will be via the Salesforce Record ID.</inlineHelpText>
        <label>Heroku Connect Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Account_SFID__c</fullName>
        <label>Parent Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Org Relationships</relationshipLabel>
        <relationshipName>Account_Org_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Acct_Bus_Role_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Party Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Business_Role__c.Account_SFID__c</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account_SFID__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Business_Role__c</referenceTo>
        <relationshipLabel>Account Org Relationships</relationshipLabel>
        <relationshipName>Account_Org_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Org Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Child_Account_SFID__c</columns>
        <columns>Child_Acct_Bus_Role_SFID__c</columns>
        <columns>Parent_Account_SFID__c</columns>
        <columns>Parent_Acct_Bus_Role_SFID__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AOR-{0000}</displayFormat>
        <label>Account Org Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Org Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>